nav showing the filter button as active when filters are currently active. filters related to logged in user no longer visible when not logged in (includes "pending" games-- as these are currently a players root games in draft mode--when game options expand I can revisit this logic)

--- a/assets/css/elements/nav.css
+++ b/assets/css/elements/nav.css
@@ -36,3 +36,6 @@ a.nav-link:hover svg {
     fill: pink; /* This changes the SVG color to pink on hover, matching the text color */
 }
 
+.nav-link.filter.active {
+    border-bottom: hotpink solid 3px;
+}
